--- a/main.ipynb
+++ b/main.ipynb
@@ -2,6 +2,127 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1df0f3c5",
+   "metadata": {},
+   "source": [
+    "# Intro to python\n",
+    "## intro to python\n",
+    "\n",
+    "###### intro to python\n",
+    "python is fun to learn, this is just an introduction\n",
+    "\n",
+    "## Order list\n",
+    "1. oubt 11\n",
+    "2. point two\n",
+    "3. point three\n",
+    "\n",
+    "## Unorder list\n",
+    "- point ont\n",
+    "- point two\n",
+    "- point three\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "50e61729",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World, i am here learning python for data science\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I am about to write my first python code\n",
+    "print(\"Hello World, i am here learning python for data science\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8af318f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "602532ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "414bdb83",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "478c3de5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1269822",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7dc5d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1140f5e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c218368f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccb8cde9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "140d90ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e5cbf17",
    "metadata": {},
    "source": [
