--- a/python tutorial.ipynb
+++ b/python tutorial.ipynb
@@ -1,6 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "29e6e86c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we are inside while loop 0\n",
+      "we are inside while loop 1\n",
+      "we are inside while loop 2\n",
+      "we are inside while loop 3\n",
+      "we are inside while loop 4\n",
+      "we are inside while loop 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter =0\n",
+    "while counter<=5:# as far as counter is less than or equal to 5 continue with while\n",
+    "    print(\"we are inside while loop {}\".format(counter))\n",
+    "    counter+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92e9900b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "3e858970",
    "metadata": {},
